--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.5.1",
         "tailwindcss": "^3.4.17",
+        "typescript": "^5.7.3",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.473.0",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
